
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_FIXED ;
 int MAP_SHARED ;
 int O_RDONLY ;
 int PROT_READ ;
 int mmap (char*,int,int ,int,int,int ) ;
 int open (char*,int ) ;

void main(){
int fd, i;
fd = open("/dev/zero", O_RDONLY);
for(i = 0; i < 26999; i++){
mmap((char*)0x00000000 + (0x10000 * i), 1, PROT_READ, MAP_SHARED | MAP_FIXED, fd, 0);
}
}
